# heart-disease-prediction

./: .env.example  .gitignore  README.md  mlflow.db  pyproject.toml  scaffold.py
evaluation/: classification_report.txt
notebooks/: 01_data_exploration.ipynb
scripts/: run_pipeline.py  setup_environment.sh  setup_zenml_stack.py
src/config/: __init__.py  logging.py  settings.py
src/data/: __init__.py  feature_engineering.py  ingestion.py  preprocessing.py  validation.py
src/models/: base.py  training.py
src/pipelines/: __init__.py  training_pipeline.py
src/steps/: __init__.py  data_steps.py  training_steps.py
