[project]
name = "heart-disease-prediction"
version = "0.1.0"
description = "An End-to-end ML pipeline predicting 10-year risk of coronary heart disease"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.20",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "prometheus-client>=0.24.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.41.0",
    "zenml[server]>=0.92.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
